# sgl

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
cmake/: sgl-config.cmake.in
src/sgl/: avx.cppm  neon.cppm  scalar.cppm  sgl.cppm  types.cppm
tests/: CMakeLists.txt
tests/src/: box_test.cpp  geometry_test.cpp  matrix_test.cpp  quaternion_test.cpp  vec_test.cpp
